--- a/requirements.txt
+++ b/requirements.txt
@@ -99,8 +99,8 @@ shutup==0.2.0
 six==1.16.0
 sniffio==1.3.0
 snowballstemmer==2.2.0
-sphinx==6.1.3
-sphinx-rtd-theme==1.1.1
+sphinx
+sphinx-rtd-theme
 sphinxcontrib-applehelp==1.0.3
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.0
