--- a/config_trade.json
+++ b/config_trade.json
@@ -2,7 +2,7 @@
   "default": {
     "_exchange": "bybit_usdt_perp, binance_usdt_perp, binance_busd_perp binance_busd_perp",
     "exchange": "BINANCE",
-    "exchange_symbol": "binance_usdt_perp",
+    "exchange_symbol": "binance_busd_perp",
     "futures": true,
     "_trade_type": "[long, short] or [long] or [short]",
     "type": ["long","short"],
@@ -25,7 +25,7 @@
     "low_target_w2": false,
 
     "_period": ["period_days_ago:30 --> 30 days ago", "period_days_ago_till:0 --> now", "period_interval:1 per 1day"],
-    "timeframe": 1,
+    "timeframe": 15,
     "period_days_ago": 1,
     "period_days_ago_till": 0,
     "period_interval": 2,
@@ -50,9 +50,9 @@
     "h_fibo": 100.0,
     "l_fibo": 100.0,
     "h_fibo_rate_ex": [0.01, 0.03, 0.351, 0, 0.058, 0.381, 0.11800000000000, 0.125000000, 0.1910000000000000000, 0.21400000000000, 0.236, 0.382, 0.5, 0.618, 0.764, 0.882, 0.1, 1.618, 2.618],
-    "entry_fibo": 0.145,
+    "entry_fibo": 0.045,
     "target_fibo": 0.381,
-    "sl_fibo": -0.145,
+    "sl_fibo": -0.005,
 
     "profit_long": 0.02,
     "profit_short": 0.02,
