--- a/config_trade.json
+++ b/config_trade.json
@@ -2,13 +2,13 @@
   "default": {
     "_exchange": "bybit_usdt_perp, binance_usdt_perp, binance_busd_perp binance_busd_perp",
     "exchange": "BINANCE",
-    "exchange_symbol": "binance_busd_perp",
+    "exchange_symbol": "binance_usdt_perp",
     "futures": true,
     "_trade_type": "[long, short] or [long] or [short]",
     "type": ["long","short"],
-    "leverage": 8,
+    "leverage": 6,
     "seed": 100,
-    "qtyrate": 0.245,
+    "qtyrate": 0.124,
 
     "_fee": "bybit_usdt_perp: -0.00025  0.0006    binance_futures: 0.0002    0.0004             0.01 --> 1%, 0.001 --> 0.1%, 0.0001 -> 0.01%   fee_taker:0.0004 시장가, fee_maker: 0.0002 지정가",
     "fee": 0.0000,
@@ -25,7 +25,7 @@
     "low_target_w2": false,
 
     "_period": ["period_days_ago:30 --> 30 days ago", "period_days_ago_till:0 --> now", "period_interval:1 per 1day"],
-    "timeframe": 15,
+    "timeframe": 5,
     "period_days_ago": 1,
     "period_days_ago_till": 0,
     "period_interval": 2,
