--- a/w145config.json
+++ b/w145config.json
@@ -2,7 +2,7 @@
   "default": {
     "_exchange": "bybit_usdt_perp, binance_usdt_perp, binance_busd_perp binance_usdt_busd_perp",
     "exchange": "BINANCE",
-    "exchange_symbol": "binance_usdt_perp",
+    "exchange_symbol": "binance_busd_perp",
     "futures": true,
     "_trade_type": "[long, short] or [long] or [short]",
     "type": ["long","short"],
