--- a/w145config.json
+++ b/w145config.json
@@ -8,7 +8,7 @@
     "type": ["long","short"],
     "leverage": 20,
     "seed": 100,
-    "qtyrate": 2,
+    "qtyrate": 1.5,
 
     "_fee": "bybit_usdt_perp: -0.00025  0.0006    binance_futures: 0.0002    0.0004             0.01 --> 1%, 0.001 --> 0.1%, 0.0001 -> 0.01%   fee_taker:0.0004 시장가, fee_maker: 0.0002 지정가",
     "fee": 0.0000,
@@ -40,7 +40,7 @@
 
     "_fractal_count": ["5: default, 7, 9 , 11"],
     "_fcnt": [11, 31, 51, 71],
-    "fcnt": [31, 51, 71],
+    "fcnt": [51, 71, 91, 111],
     "loop_count": 1,
     "up_to_count": 3,
     "condi_same_date": true,
