--- a/w145runHistory/config_backtest.json
+++ b/w145runHistory/config_backtest.json
@@ -6,7 +6,7 @@
     "futures": true,
     "_trade_type": "[long, short] or [long] or [short]",
     "type": ["long","short"],
-    "leverage": 0.25,
+    "leverage": 1,
     "seed": 100,
 
     "_fee": "bybit_usdt_perp: -0.00025  0.0006   binance_busd_perp: 0.0120%/0.0300% binance_usdt_futures: 0.0002    0.0004             0.01 --> 1%, 0.001 --> 0.1%, 0.0001 -> 0.01%   fee_taker:0.0004 시장가, fee_maker: 0.0002 지정가",
@@ -27,12 +27,12 @@
 
     "_period": ["period_days_ago:30 --> 30 days ago", "period_days_ago_till:0 --> now", "period_interval:1 per 1day"],
     "timeframe": 3,
-    "period_days_ago": 1,
-    "period_days_ago_till": 0,
+    "period_days_ago": 60,
+    "period_days_ago_till": 50,
     "period_interval": 2,
     "window": 720,
     "symbol_duplicated": false,
-    "symbol_random": false,
+    "symbol_random": true,
     "symbol_each": true,
     "symbol_last":false,
     "symbol_length":false,
