--- a/w045configMTF.json
+++ b/w045configMTF.json
@@ -24,7 +24,7 @@
     "low_target_w2": false,
 
     "_period": ["period_days_ago:30 --> 30 days ago", "period_days_ago_till:0 --> now", "period_interval:1 per 1day"],
-    "timeframe": [3, 15],
+    "timeframe": [5, 15, 30],
     "period_days_ago": 5,
     "period_days_ago_till": 0,
     "period_interval": 2,
