--- a/w045configMTF.json
+++ b/w045configMTF.json
@@ -9,7 +9,7 @@
     "_trade_type": "[long, short] or [long] or [short]",
     "type": ["long","short"],
     "maxleverage": 100,
-    "qtyrate": 1,
+    "qtyrate": 1.5,
     "walletrate": 0.15,
 
     "_c_risk_beyond_desc": ["0.10: 10%,   0.0010: 0.1%"],
@@ -22,7 +22,7 @@
     "o_fibo": 118.0,
 
     "_period": ["period_days_ago:30 --> 30 days ago", "period_days_ago_till:0 --> now", "period_interval:1 per 1day"],
-    "timeframe": [5, 15],
+    "timeframe": [15],
     "period_days_ago": 5,
     "period_days_ago_till": 0,
     "period_interval": 2,
