--- a/w045configMTF.json
+++ b/w045configMTF.json
@@ -7,9 +7,9 @@
     "exchange_symbol": "binance_usdt_busd_perp",
     "futures": true,
     "_trade_type": "[long, short] or [long] or [short]",
-    "type": ["long","short"],
+    "type": ["long", "short"],
     "maxleverage": 100,
-    "qtyrate": 1.00,
+    "qtyrate": 0.25,
     "walletrate": 0.15,
 
     "_c_risk_beyond_desc": ["0.10: 10%,   0.0010: 0.1%"],
@@ -22,7 +22,7 @@
     "o_fibo": 118.0,
 
     "_period": ["period_days_ago:30 --> 30 days ago", "period_days_ago_till:0 --> now", "period_interval:1 per 1day"],
-    "timeframe": [15],
+    "timeframe": [3, 5, 15],
     "period_days_ago": 5,
     "period_days_ago_till": 0,
     "period_interval": 2,
@@ -67,15 +67,11 @@
     "profit_short": 0.02,
     "stop_long": 0.005,
     "stop_short": 0.005,
-    "max_buy": 3,
-    "max_sell": 3,
-    "epoch_num": 10,
 
     "intersect_idx": false,
     "plotview": true,
     "printout": false,
     "multi_process": true,
-    "symbols_except": ["KEEPUSDT"],
     "seed": 100,
     "init_running_trade": false,
     "reset_leverage": false
