--- a/w045configMTF.json
+++ b/w045configMTF.json
@@ -1,7 +1,7 @@
 {
   "default": {
-    "version": "0.53",
-    "descrition": "045_MTF added c_next_ohlc_beyond",
+    "version": "0.54",
+    "descrition": "045_MTF added c_next_ohlc_beyond ratelimit",
     "_exchange": "bybit_usdt_perp, binance_usdt_perp, binance_busd_perp binance_usdt_busd_perp",
     "exchange": "BINANCE",
     "exchange_symbol": "binance_usdt_busd_perp",
@@ -22,7 +22,7 @@
     "o_fibo": 118.0,
 
     "_period": ["period_days_ago:30 --> 30 days ago", "period_days_ago_till:0 --> now", "period_interval:1 per 1day"],
-    "timeframe": [15],
+    "timeframe": [1],
     "period_days_ago": 5,
     "period_days_ago_till": 0,
     "period_interval": 2,
@@ -73,7 +73,7 @@
     "printout": false,
     "multi_process": true,
     "seed": 100,
-    "init_running_trade": true,
+    "init_running_trade": false,
     "reset_leverage": false
   },
   "basic": {
