--- a/w045config.json
+++ b/w045config.json
@@ -9,7 +9,7 @@
     "_trade_type": "[long, short] or [long] or [short]",
     "type": ["long", "short"],
     "maxleverage": 100,
-    "qtyrate": 0.25,
+    "qtyrate": 0.33,
     "walletrate": 0.3,
 
     "_c_risk_beyond_desc": ["0.10: 10%,   0.0010: 0.1%"],
@@ -74,7 +74,7 @@
     "printout": false,
     "multi_process": true,
     "seed": 100,
-    "init_running_trade": true,
+    "init_running_trade": false,
     "reset_leverage": false
   },
   "basic": {
