--- a/w045config.json
+++ b/w045config.json
@@ -1,7 +1,7 @@
 {
   "default": {
-    "version": "0.71",
-    "descrition": "045 MONIHISTORY refactoried version added ft fcnt monitp",
+    "version": "0.8",
+    "descrition": "045 MONIHISTORY refactoried version added ft fcnt monitp fractal shift",
     "_exchange": "bybit_usdt_perp, binance_usdt_perp, binance_busd_perp binance_usdt_busd_perp",
     "exchange": "BINANCE",
     "exchange_symbol": "binance_usdt_busd_perp",
@@ -22,7 +22,7 @@
     "o_fibo": 118.0,
 
     "_period": ["period_days_ago:30 --> 30 days ago", "period_days_ago_till:0 --> now", "period_interval:1 per 1day"],
-    "timeframe": [3],
+    "timeframe": [3, 5, 15],
     "period_days_ago": 0,
     "period_days_ago_till": 0,
     "period_interval": 0,
@@ -42,6 +42,11 @@
     "loop_count": 1,
     "up_to_count": 3,
     "condi_same_date": true,
+    "condi_compare_before_fractal": true,
+    "condi_compare_before_fractal_strait": true,
+    "condi_compare_before_fractal_shift": 1,
+    "condi_compare_before_fractal_mode": 1,
+
     "et_zone_rate": 0.5,
 
     "_fee": "bybit_usdt_perp: -0.00025  0.0006    binance_futures: 0.0002    0.0004             0.01 --> 1%, 0.001 --> 0.1%, 0.0001 -> 0.01%   fee_taker:0.0004 시장가, fee_maker: 0.0002 지정가",
