--- a/w045config.json
+++ b/w045config.json
@@ -21,7 +21,7 @@
     "o_fibo": 118.0,
 
     "_period": ["period_days_ago:30 --> 30 days ago", "period_days_ago_till:0 --> now", "period_interval:1 per 1day"],
-    "timeframe": [3, 5, 15],
+    "timeframe": [3, 5],
     "period_days_ago": 0,
     "period_days_ago_till": 0,
     "period_interval": 0,
@@ -36,14 +36,14 @@
 
     "_fractal_count": ["5: default, 7, 9 , 11"],
     "_fcnt": [31, 51, 71],
-    "fcnt": [31, 51, 71],
+    "fcnt": [21, 31, 51, 71],
     "loop_count": 1,
     "up_to_count": 3,
     "condi_same_date": true,
 
     "condi_compare_before_fractal": false,
     "condi_compare_before_fractal_strait": true,
-    "condi_compare_before_fractal_shift": 1,
+    "condi_compare_before_fractal_shift": 3,
     "condi_compare_before_fractal_mode": 1,
 
     "condi_kelly_adaptive": true,
