--- a/w045config.json
+++ b/w045config.json
@@ -22,21 +22,21 @@
 
     "_period": ["period_days_ago:30 --> 30 days ago", "period_days_ago_till:0 --> now", "period_interval:1 per 1day"],
     "timeframe": [3, 5],
-    "period_days_ago": 0,
+    "period_days_ago": 5,
     "period_days_ago_till": 0,
     "period_interval": 0,
     "window": 720,
 
-    "symbol_random": true,
+    "symbol_random": false,
     "symbol_last":false,
     "symbol_length":false,
     "round_trip_flg": false,
     "round_trip_count": 1,
     "compounding": true,
 
-    "_fractal_count": ["5: default, 7, 9 , 11   ichimoku 9, 17, 26, 37, 43, 52"],
+    "_fractal_count": ["/21, 31, 51, 71  fibo:8, 13, /21, 34, 55, 89  ichimoku 9, /17, 26, 37, 43, 52 "],
     "_fcnt": [21, 31, 51, 71],
-    "fcnt": [21, 31, 51, 71],
+    "fcnt": [17, 26, 37],
     "loop_count": 1,
     "up_to_count": 3,
     "condi_same_date": true,
