--- a/w045config.json
+++ b/w045config.json
@@ -21,7 +21,7 @@
     "o_fibo": 118.0,
 
     "_period": ["period_days_ago:30 --> 30 days ago", "period_days_ago_till:0 --> now", "period_interval:1 per 1day"],
-    "timeframe": ["3m"],
+    "timeframe": ["3m", "5m", "15m"],
     "period_days_ago": 5,
     "period_days_ago_till": 0,
     "period_interval": 1,
@@ -48,9 +48,9 @@
 
     "condi_kelly_adaptive": true,
     "condi_kelly_window": 20,
-    "qtyrate": 0.25,
-    "krate_max": 0.35,
-    "krate_min": 0.15,
+    "qtyrate": 0.30,
+    "krate_max": 0.40,
+    "krate_min": 0.20,
 
     "condi_plrate_adaptive": true,
     "condi_plrate_rate": 0.30,
