--- a/w045configmode.json
+++ b/w045configmode.json
@@ -21,8 +21,8 @@
     "o_fibo": 118.0,
 
     "_period": ["period_days_ago:30 --> 30 days ago", "period_days_ago_till:0 --> now", "period_interval:1 per 1day_______  \"1m\", \"5m\""],
-    "timeframe": ["3m", "5m", "15m"],
-    "period_days_ago": 100,
+    "timeframe": ["3m", "15m"],
+    "period_days_ago": 28,
     "period_days_ago_till": 0,
     "period_interval": 1,
     "window": 720,
@@ -36,7 +36,7 @@
 
     "_fractal_count": ["/21, 31, 51, 71  fibo:8, 13, /21, 34, 55, 89  ichimoku 9, /17, 26, 37, 43, 52 _____  7, 34, 52 "],
     "_fcnt": [17, 26, 37],
-    "fcnt": [17, 34, 52],
+    "fcnt": [11, 21, 34, 55],
     "loop_count": 1,
     "up_to_count": 3,
     "c_same_date": true,
@@ -62,10 +62,10 @@
 
     "_fee": "bybit_usdt_perp: -0.00025  0.0006    binance_futures: 0.0002    0.0004             0.01 --> 1%, 0.001 --> 0.1%, 0.0001 -> 0.01%   fee_taker:0.0004 시장가, fee_maker: 0.0002 지정가",
     "fee": 0.0000,
-    "fee_limit": 0.00018,
-    "fee_sl": 0.00036,
+    "fee_limit": 0.00020,
+    "fee_sl": 0.00040,
     "tp_type": "maker",
-    "fee_tp": 0.00018,
+    "fee_tp": 0.00020,
     "fee_slippage": 0.00010,
 
     "high_target": 1.0,
