--- a/w045configmode.json
+++ b/w045configmode.json
@@ -22,7 +22,7 @@
 
     "_period": ["period_days_ago:30 --> 30 days ago", "period_days_ago_till:0 --> now", "period_interval:1 per 1day_______  \"1m\", \"5m\""],
     "timeframe": ["3m", "15m"],
-    "period_days_ago": 5,
+    "period_days_ago": 20,
     "period_days_ago_till": 0,
     "period_interval": 1,
     "window": 720,
@@ -34,9 +34,9 @@
     "round_trip_count": 1,
     "compounding": true,
 
-    "_fractal_count": ["/21, 31, 51, 71  fibo:8, 13, /21, 34, 55, 89  ichimoku 9, /17, 26, 37, 43, 52 _____  7, 34, 52 "],
-    "_fcnt": [17, 26, 37],
-    "fcnt": [21, 34, 55],
+    "_fractal_count": ["소스/ 2 3 5 7 11 13 17 19 23 29 31 37 41 43 47 53 59 /21, 31, 51, 71   skdfibo:8, 13, /21, 34, 55, 89  ichimoku 9, /17, 26, 37, 43, 52 _____  7, 34, 52 "],
+    "_fcnt": [21, 34, 55 ,      17, 37, 59],
+    "fcnt": [17, 37, 59],
     "loop_count": 1,
     "up_to_count": 3,
     "c_same_date": true,
@@ -65,7 +65,7 @@
     "fee_limit": 0.00020,
     "fee_sl": 0.00040,
     "tp_type": "maker",
-    "fee_tp": 0.00020,
+    "fee_tp": 0.00040,
     "fee_slippage": 0.00010,
 
     "high_target": 1.0,
@@ -92,7 +92,7 @@
     "seed": 100,
     "init_running_trade": false,
     "reset_leverage": false,
-    "trade_mode": "BACKTEST",
+    "trade_mode": "REAL",
     "paper_flg": true
   },
   "basic": {
